--- a/wholesale_data_analysis_starter_code.ipynb
+++ b/wholesale_data_analysis_starter_code.ipynb
@@ -414,10 +414,40 @@
    "execution_count": 4,
    "id": "b24b53cc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "first          0\n",
+       "last           0\n",
+       "job            0\n",
+       "phone          0\n",
+       "email          0\n",
+       "client_id      0\n",
+       "order_id       0\n",
+       "order_date     0\n",
+       "order_week     0\n",
+       "order_year     0\n",
+       "item_id        0\n",
+       "category       0\n",
+       "subcategory    0\n",
+       "unit_price     0\n",
+       "unit_cost      0\n",
+       "unit_weight    0\n",
+       "qty            0\n",
+       "line_number    0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Use this space to do any additional research\n",
-    "# and familiarize yourself with the data.\n"
+    "# and familiarize yourself with the data.\n",
+    "df.isna().sum()"
    ]
   },
   {
@@ -1822,7 +1852,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 17,
    "id": "7c005f34",
    "metadata": {},
    "outputs": [
@@ -1863,7 +1893,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 18,
    "id": "81b6e4d2",
    "metadata": {},
    "outputs": [
@@ -1949,7 +1979,7 @@
        "1      33615   64313      1828984.89   8377308.52   2201994.61"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1979,7 +2009,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 19,
    "id": "7be02867",
    "metadata": {},
    "outputs": [
@@ -2072,7 +2102,7 @@
        "1            8.377309           2.201995  "
       ]
      },
-     "execution_count": 26,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2095,7 +2125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 20,
    "id": "8ead0986",
    "metadata": {},
    "outputs": [
@@ -2188,7 +2218,7 @@
        "1            8.377309           2.201995  "
       ]
      },
-     "execution_count": 27,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
