final change to main code

--- a/wholesale_data_analysis_starter_code.ipynb
+++ b/wholesale_data_analysis_starter_code.ipynb
@@ -2232,8 +2232,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "6589d63c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overall most clients made a similar profit margin asides from client 24741 who made 10x what the other clients made.\n",
+      "The surprising portion of the data is that the top earning client only purchased 3x the units of the other clients but his profits are significantly \\ higher than the others\n"
+     ]
+    }
+   ],
+   "source": [
+    "# sumarize findings.\n",
+    "\n",
+    "print('Overall most clients made a similar profit margin asides from client 24741 who made 10x what the other clients made.')\n",
+    "print('The surprising portion of the data is that the top earning client only purchased 3x the units of the other clients but his profits are significantly higher than the others')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "52631e4b-a04f-4d9d-a500-8785405169ff",
    "metadata": {},
    "outputs": [],
    "source": []
